test/runnable/recursive-record.crow
main nat^(_ string[]) summon trusted
	a r = (),
	_ = a
	()

r record
	next r?
