test/compile-errors/main-duplicate.crow
main nat^(_ string[])
	()

main nat^(_ string[])
	()
